Kubernetes/payment-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payment-mini-service-deployment
  labels:
    app: payment-mini-service
spec:
  selector:
    matchLabels:
      app: payment-mini-service
  template:
    metadata:
      labels:
        app: payment-mini-service
    spec:
      containers:
      - name: payment-mini-service
        image: walgreens/mini-service/payment
        imagePullPolicy: Never
        ports:
        - containerPort: 8080
        resources:
          limits:
            cpu: 300m
          requests:
            cpu: 200m
        # readinessProbe:
        #   httpGet:
        #     path: /actuator/health
        #     port: 8080
        #   initialDelaySeconds: 10
        #   periodSeconds: 2
        #   timeoutSeconds: 1
        #   successThreshold: 1
        #   failureThreshold: 2

---

apiVersion: v1
kind: Service
metadata:
  name: payment-service
spec:
  selector:
    app: payment-mini-service
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
