Kubernetes/userManagement-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-management-mini-service-deployment
  labels:
    app: user-management-mini-service
spec:
  selector:
    matchLabels:
      app: user-management-mini-service
  template:
    metadata:
      labels:
        app: user-management-mini-service
    spec:
      containers:
      - name: user-management-mini-service
        image: walgreens/mini-service/user-management
        imagePullPolicy: Never
        ports:
        - containerPort: 8080
        resources:
          limits:
            cpu: 300m
          requests:
            cpu: 200m
        readinessProbe:
          httpGet:
            path: /actuator/health
            port: 8080
          initialDelaySeconds: 10
          periodSeconds: 2
          timeoutSeconds: 1
          successThreshold: 1
          failureThreshold: 2

---

apiVersion: v1
kind: Service
metadata:
  name: user-management-service
spec:
  selector:
    app: user-management-mini-service
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
