Kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mini-services-ingress
spec:
  ingressClassName: "nginx"
  rules:
  - host: walgreens.com
    http:
      paths:
      - path: /api/user
        pathType: Prefix  
        backend:
          service:
            name: user-management-service
            port: 
              number: 8080
      - path: /api/admin
        pathType: Prefix  
        backend:
          service:
            name: user-management-service
            port: 
              number: 8080
      - path: /actuator/health
        pathType: Prefix  
        backend:
          service:
            name: user-management-service
            port: 
              number: 8080
      - path: /api/cart
        pathType: Prefix  
        backend:
          service:
            name: cart-service
            port: 
              number: 8080
      - path: /api/product
        pathType: Prefix  
        backend:
          service:
            name: product-service
            port: 
              number: 8080
      - path: /api/order
        pathType: Prefix  
        backend:
          service:
            name: order-service
            port: 
              number: 8080
      - path: /api/payment
        pathType: Prefix  
        backend:
          service:
            name: payment-service
            port: 
              number: 8080
